--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,20 @@ h1, h2, h3, h4 {
   color: white;
 }
 
+.btn-donate {
+  background-color: #ED254E;
+  border-radius: 5px;
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+  color: white !important;
+}
+
+.btn-donate:hover {
+  background-color: #ED254E;
+  opacity: 0.8;
+  color: white;
+}
+
 /* Brumbcrumb */
 
 .breadcrumb-here {
@@ -172,6 +186,13 @@ span.nav-link.active {
 }
 
 .nav-link:hover {
+  background-color: var(--link-color-background-hover) !important;
+  border-radius: 5px;
+  color: var(--black-text) !important;
+  text-decoration: none !important;
+}
+
+.nav-donate-link:hover {
   background-color: var(--link-color-background-hover) !important;
   border-radius: 5px;
   color: var(--black-text) !important;
